--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -17,15 +17,18 @@
 
     <form>
         <input type="hidden" method="GET" action="/request">
-
+    
 
     </form>
-    <span data-th-text="${id}">article id</span>
     
+    <span data-th-text="${id}">Article id</span>
+
     <div data-th-text="${title}">Title</div>
 
 
-    <button type="button">Save!</button>
+
+
+    <button type="button">Save</button>
 
     </div>
 </body>
